BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/View_vod__c.object
<CustomObject>
    <description>This object stores information about views that return a list of objects.</description>
    <fields>
        <fullName>Address_Scope_vod__c</fullName>
        <description>Determines how many addresses are returned for a &quot;My Accounts&quot; view.  Valid values are &quot;all&quot; and &quot;mine&quot;.</description>
        <label>Address Scope</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Country_Code_BMS_SHARED__c</fullName>
        <description>VPRO BMS EMEA Feb-2014: created the field, used by any Region, sourced from the User Source Country field.</description>
        <formula>TEXT( Owner:User.User_Source_Country_BMS_CORE__c )</formula>
        <label>BMS Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columns_vod__c</fullName>
        <description>A delimited list of columns defined for the view.</description>
        <label>Columns</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_vod__c</fullName>
        <description>A delimited list of criteria defined for a view.</description>
        <label>Criteria</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>This is an out of the box External Id field provided. There is no logic associated with how this gets populated. This field if used will have to be populated by the implementation team.  This field will be used for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ownership_Scope_vod__c</fullName>
        <description>Determines whether the view displays accounts the user owns or the user can see.</description>
        <label>Ownership Scope</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_vod__c</fullName>
        <description>A comma-delimited list of profile ids is stored here to publicly share a view across profiles.</description>
        <label>Profile</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether a view is accessed publicly or privately.</description>
        <label>Public?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_vod__c</fullName>
        <description>Field that allows user to select from a base query of Child Account or Account. &quot;Account Location&quot; queries off of accounts and location of business account relationship.</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Account Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Statement_vod__c</fullName>
        <description>The compiled SOQL statement for a view.</description>
        <label>Statement</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>The type of view.  For example, &quot;MyAccounts&quot; is a valid value.</description>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup to user.  This is the user the view is created for.  This allows for administrators to create views on their behalf.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>View_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>View</label>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>